Jumpserver-ec2.tf
# #--------------------------------------------------------------
# # EC2
# #--------------------------------------------------------------

# # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/data-sources/ami
# data "aws_ami" "amazon2_amd64" {
#   most_recent = true
#   filter {
#     name   = "name"
#     values = ["amzn2-ami-kernel*"]
#   }
#   filter {
#     name   = "architecture"
#     values = ["x86_64"]
#   }
#   owners = ["amazon"]
# }

# # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/instance
# resource "aws_instance" "ec2" {
#   ami                         = data.aws_ami.amazon2_amd64.id
#   instance_type               = "t3.micro"
#   subnet_id                   = aws_subnet.public_a.id
#   associate_public_ip_address = "true"
#   vpc_security_group_ids      = [aws_security_group.ec2.id]
#   iam_instance_profile        = aws_iam_instance_profile.systems-manager.name

#   user_data = <<-EOF
# #!/bin/bash
# yum update -y
# yum install -y mysql
#               EOF
# }


# #--------------------------------------------------------------
# # Security group
# #--------------------------------------------------------------

# # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
# resource "aws_security_group" "ec2" {
#   name = "ec2-sg"

#   description = "EC2 service security group"
#   vpc_id      = aws_vpc.main.id
# }

# # https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group_rule
# resource "aws_security_group_rule" "ec2_egress_all" {
#   type              = "egress"
#   from_port         = 0
#   to_port           = 0
#   protocol          = "-1"
#   cidr_blocks       = ["0.0.0.0/0"]
#   security_group_id = aws_security_group.ec2.id
# }



# #--------------------------------------------------------------
# # IAM Role
# #--------------------------------------------------------------

# data "aws_iam_policy_document" "ec2" {
#   statement {
#     actions = ["sts:AssumeRole"]

#     principals {
#       type        = "Service"
#       identifiers = ["ec2.amazonaws.com"]
#     }
#   }
# }

# data "aws_iam_policy" "systems-manager" {
#   arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
# }

# resource "aws_iam_role" "ec2" {
#   name               = "-ec2-role"
#   assume_role_policy = data.aws_iam_policy_document.ec2.json
# }

# resource "aws_iam_role_policy_attachment" "ec2" {
#   role       = aws_iam_role.ec2.name
#   policy_arn = data.aws_iam_policy.systems-manager.arn
# }

# resource "aws_iam_instance_profile" "systems-manager" {
#   name = "ec2-instance-profile"
#   role = aws_iam_role.ec2.name
# }
